--- a/templates/core/lecciones/alfabeto.html
+++ b/templates/core/lecciones/alfabeto.html
@@ -4,37 +4,37 @@
 {% block content %}
 <body class="bg-gray-100">
     <div class="flex justify-center items-center flex-col min-h-screen">
-        <h1 class="text-3xl font-bold mb-6">Nivel 1</h1>
+        <h1 class="text-3xl font-bold mb-6" style="font-family: 'Jomolhari', serif; margin-top: 50px;">Nivel 1</h1>
 
-        <!-- Mensaje emergente inicial -->
-        <div id="popup-message" class="fixed inset-0 flex justify-center items-center bg-black bg-opacity-50 z-50">
-            <div class="bg-white p-8 rounded-lg shadow-lg text-center w-80">
-                <h2 class="text-2xl font-semibold mb-4">¡Bienvenido al Nivel 1!</h2>
-                <p class="text-gray-600 mb-6">En este nivel aprenderás el abecedario en lengua de señas. ¡Haz clic en comenzar para iniciar!</p>
-                <button id="start-button" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Comenzar</button>
+        <!-- Mensaje emergente inicial para iniciar el nivel -->
+        <div id="popup-message" class="fixed inset-0 flex justify-center items-center bg-black bg-opacity-50 z-50" style="margin-top: 90px;">
+            <div class="p-8 rounded-lg shadow-lg text-center w-96" style="background-color: #EFE9E9;">
+                <h2 class="text-2xl font-semibold mb-4" style="font-family: 'Jomolhari', serif;">¡Bienvenido al Nivel 1!</h2>
+                <p class="text-gray-600 mb-6" style="font-family: 'Jomolhari', serif;">En este nivel aprenderás el abecedario en lengua de señas. Comenzarás con las vocales y luego continuarás con las consonantes.</p>
+                <button id="start-level-button" class="text-white py-2 px-4 rounded-md" style="background-color: #A0A38A; font-family: 'Jomolhari', serif;">Comenzar</button>
             </div>
         </div>
 
         <!-- Mensaje emergente para indicar éxito en la detección de la seña -->
         <div id="success-message" class="fixed inset-0 flex justify-center items-center bg-black bg-opacity-50 z-50 hidden">
             <div class="bg-white p-8 rounded-lg shadow-lg text-center w-80">
-                <h2 class="text-2xl font-semibold mb-4">¡Seña correcta!</h2>
-                <p class="text-gray-600 mb-6">Has realizado la seña correctamente. Haz clic en "Siguiente" para continuar con la siguiente letra.</p>
-                <button id="next-button" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Siguiente</button>
+                <h2 class="text-2xl font-semibold mb-4" style="font-family: 'Jomolhari', serif;">¡Seña correcta!</h2>
+                <p class="text-gray-600 mb-6" style="font-family: 'Jomolhari', serif;">Has realizado la seña correctamente. Haz clic en "Siguiente" para continuar con la siguiente letra.</p>
+                <button id="next-button" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md" style="font-family: 'Jomolhari', serif;">Siguiente</button>
             </div>
         </div>
 
         <!-- Contenido principal oculto inicialmente -->
-        <div id="content-container" class="flex justify-between w-full max-w-5xl p-4 hidden">
+        <div id="content-container" class="flex justify-center space-x-6 w-full max-w-5xl p-4 hidden" style="margin-top: -30px;">
             <!-- Cuadro izquierdo -->
-            <div class="bg-white rounded-lg shadow-lg p-6 w-2/5">
-                <h2 class="text-2xl font-semibold mb-4">Letra Actual: <span id="letra-actual">{{ letra_actual }}</span></h2>
+            <div class="bg-white rounded-lg shadow-lg p-6" style="width: 550px;">
+                <h2 class="text-2xl font-semibold mb-4" style="font-family: 'Jomolhari', serif;">Letra Actual: <span id="letra-actual">{{ letra_actual }}</span></h2>
                 <img id="imagen-letra" src="{{ senal_detectada }}" alt="Imagen de la Letra {{ letra_actual }}" class="w-full h-auto">
             </div>
-
+        
             <!-- Cuadro derecho con la cámara -->
-            <div class="bg-white rounded-lg shadow-lg p-6 w-2/5">
-                <h2 class="text-2xl font-semibold mb-4">Detector de Señales IA</h2>
+            <div class="bg-white rounded-lg shadow-lg p-6" style="width: 550px;">
+                <h2 class="text-2xl font-semibold mb-4" style="font-family: 'Jomolhari', serif;">Detector de Señas</h2>
                 <!-- Transmisión en vivo de la cámara -->
                 <img src="{% url 'core:video_feed' 'alfabeto' %}" class="rounded-lg w-full h-auto" alt="Video en tiempo real">
             </div>
@@ -44,29 +44,13 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const popup = document.getElementById('popup-message');
-            const cameraPermissionPopup = document.createElement('div');
-            cameraPermissionPopup.classList.add('fixed', 'inset-0', 'flex', 'justify-center', 'items-center', 'bg-black', 'bg-opacity-50', 'z-50');
-            cameraPermissionPopup.innerHTML = `
-                <div class="bg-white p-8 rounded-lg shadow-lg text-center w-80">
-                    <h2 class="text-2xl font-semibold mb-4">Activar Cámara</h2>
-                    <p class="text-gray-600 mb-6">Para realizar el nivel, necesitamos acceso a tu cámara. ¿Deseas encender la cámara ahora?</p>
-                    <button id="allow-camera-button" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Permitir</button>
-                    <button id="deny-camera-button" class="bg-gray-500 hover:bg-gray-700 text-white py-2 px-4 rounded-md mt-2">No permitir</button>
-                </div>
-            `;
-            document.body.appendChild(cameraPermissionPopup);
-        
             const contentContainer = document.getElementById('content-container');
-            const startButton = document.getElementById('start-button');
             const successMessage = document.getElementById('success-message');
             const nextButton = document.getElementById('next-button');
             const letraActual = document.getElementById('letra-actual');
             const imagenLetra = document.getElementById('imagen-letra');
-            const allowCameraButton = document.getElementById('allow-camera-button');
-            const denyCameraButton = document.getElementById('deny-camera-button');
-        
-            cameraPermissionPopup.style.display = 'none'; // Mantener oculto el mensaje de activación de cámara inicialmente
-        
+            const startLevelButton = document.getElementById('start-level-button');
+
             // Verificar si el nivel ya está completado al cargar la página
             $.ajax({
                 url: "{% url 'core:alfabeto' %}",  
@@ -97,50 +81,71 @@
                     console.log('Error al verificar el progreso:', error);
                 }
             });
-        
-            // Al hacer clic en "Comenzar", mostrar el mensaje para habilitar la cámara
-            startButton.onclick = function() {
-                popup.style.display = 'none'; // Ocultar el popup inicial
-                cameraPermissionPopup.style.display = 'flex'; // Mostrar el mensaje de permiso para la cámara
+            
+            // Iniciar la lección en la fase de vocales al hacer clic en "Comenzar"
+            startLevelButton.onclick = function() {
+                popup.style.display = 'none';
+                contentContainer.style.display = 'flex';
+                iniciarLeccion('vocales');
             };
-        
-            // Si el usuario permite el uso de la cámara
-            allowCameraButton.onclick = function() {
-                cameraPermissionPopup.style.display = 'none'; // Ocultar el popup de la cámara
-                contentContainer.style.display = 'flex'; // Mostrar el contenido del nivel
-                iniciarDeteccion();  // Iniciar la detección de señas y activar la cámara
-            };
-        
-            // Si el usuario no permite el uso de la cámara
-            denyCameraButton.onclick = function() {
-                cameraPermissionPopup.style.display = 'none'; // Ocultar el popup de la cámara
-                Swal.fire({
-                    title: 'Cámara requerida',
-                    text: 'Necesitas activar la cámara para poder realizar este nivel.',
-                    icon: 'warning',
-                    confirmButtonText: 'Ok'
-                }).then(() => {
-                    // Redirigir al usuario fuera del nivel o bloquear el acceso
-                    window.location.href = '/levels/';
-                });
-            };
-        
-            //Función para mostrar el mensaje de éxito cuando la seña es correcta
-            function mostrarMensajeExito() {
-                successMessage.style.display = 'flex'; 
-            }
-        
-            //Función para enviar la seña detectada al servidor para validación
-            function onSenalDetectada(senal_detectada) {
+
+            // Función para cargar la letra y la imagen actuales
+            function cargarLetraYImagen(fase) {
                 $.ajax({
-                    url: "{% url 'core:alfabeto' %}",  
+                    url: "{% url 'core:alfabeto' %}",
                     type: 'POST',
                     data: {
-                        'senal_realizada': senal_detectada,
+                        'fase': fase,
                         'csrfmiddlewaretoken': '{{ csrf_token }}'
                     },
                     success: function(response) {
-                        if (response.status === 'success') {
+                        if (response.status === 'success' || response.status === 'transition') {
+                            letraActual.innerText = response.nueva_letra;
+                            imagenLetra.src = response.nueva_imagen;
+                        }
+                    },
+                    error: function(xhr, status, error) {
+                        console.log('Error al cargar la letra y la imagen:', error);
+                    }
+                });
+            }
+
+            // Función para iniciar la lección con la fase indicada
+            function iniciarLeccion(fase) {
+                cargarLetraYImagen(fase);
+                iniciarDeteccion(fase);
+            }
+
+            // Función para mostrar el mensaje de éxito cuando la seña es correcta
+            function mostrarMensajeExito() {
+                successMessage.style.display = 'flex';
+            }
+
+            // Función para enviar la seña detectada al servidor para validación
+            function onSenalDetectada(senal_detectada, fase) {
+                $.ajax({
+                    url: "{% url 'core:alfabeto' %}",
+                    type: 'POST',
+                    data: {
+                        'senal_realizada': senal_detectada,
+                        'fase': fase,
+                        'csrfmiddlewaretoken': '{{ csrf_token }}'
+                    },
+                    success: function(response) {
+                        if (response.status === 'transition') {
+                            // Transición automática de vocales a consonantes
+                            Swal.fire({
+                                title: '¡Vocales completadas!',
+                                text: response.mensaje,
+                                icon: 'info',
+                                confirmButtonText: 'Continuar'
+                            }).then(() => {
+                                // Cargar automáticamente la primera consonante y continuar la lección
+                                letraActual.innerText = response.nueva_letra;
+                                imagenLetra.src = response.nueva_imagen;
+                                iniciarDeteccion('consonantes');
+                            });
+                        } else if (response.status === 'success') {
                             if (response.completado) {
                                 Swal.fire({
                                     title: '¡Felicidades!',
@@ -149,13 +154,11 @@
                                     confirmButtonText: 'Ir al siguiente nivel'
                                 }).then((result) => {
                                     if (result.isConfirmed) {
-                                        //Redirigir al usuario a la pantalla de niveles
                                         window.location.href = response.redirigir;
                                     }
                                 });
                             } else {
-                                mostrarMensajeExito(); // Mostrar el mensaje de éxito
-                                // Al hacer clic en el botón "Siguiente", actualizar la letra actual y la imagen
+                                mostrarMensajeExito();
                                 nextButton.onclick = function() {
                                     letraActual.innerText = response.nueva_letra;
                                     imagenLetra.src = response.nueva_imagen;
@@ -170,25 +173,21 @@
                         console.log('Error al enviar la seña detectada:', error);
                     }
                 });
-            }
-        
+            }            
+
             //Función para hacer una petición al backend y detectar la seña en tiempo real
-            function detectarSenalDesdeBackend() {
-                const tipoLeccion = '{{ tipo_leccion }}'; 
-                console.log("Tipo de lección enviado:", tipoLeccion); 
-        
+            function detectarSenalDesdeBackend(fase) {
                 $.ajax({
                     url: "{% url 'core:detectar_senal' %}",
                     type: 'POST',
                     data: {
-                        'tipo_leccion': tipoLeccion,
+                        'tipo_leccion': 'alfabeto',
+                        'fase': fase,
                         'csrfmiddlewaretoken': '{{ csrf_token }}'
                     },
                     success: function(response) {
                         if (response.status === 'success') {
-                            // Si se detecta una seña correctamente, procesa la respuesta
-                            var senal_detectada = response.senal_detectada;
-                            onSenalDetectada(senal_detectada);  // Procesa la seña detectada
+                            onSenalDetectada(response.senal_detectada, fase);
                         } else {
                             console.log('No se detectó ninguna seña.');
                         }
@@ -198,10 +197,12 @@
                     }
                 });
             }
-        
-            //Función para iniciar la detección de señas a intervalos regulares
-            function iniciarDeteccion() {
-                setInterval(detectarSenalDesdeBackend, 2000);  // Llama a la IA cada 2 segundos
+
+            // Función para iniciar la detección de señas con la fase actual
+            function iniciarDeteccion(fase) {
+                setInterval(function() {
+                    detectarSenalDesdeBackend(fase);
+                }, 2000);
             }
         });
     </script>    
